# morrigu-rs

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix
Macha/: Cargo.toml  build.rs
Macha/assets/src/shaders/test/: test.frag  test.vert
Macha/src/: main.rs
macha/: Cargo.toml  build.rs  imgui.ini
macha/assets/meshes/: sphere.ply
macha/assets/scenes/: metallic_monkey.glb
macha/assets/src/shaders/flat/: flat.frag  flat.vert
macha/assets/src/shaders/test/: test.comp  test.frag  test.vert
macha/src/: camera.rs  ecs_buffer.rs  main.rs
macha/src/components/: macha_options.rs  mod.rs  selected_entity.rs
macha/src/compute_shader_test/: mod.rs
macha/src/compute_shader_test/shaders/: blur.comp  sharpen.comp
macha/src/compute_shader_test/shaders/textured/: textured.frag
macha/src/editor/: camera.rs  ecs_buffer.rs  mod.rs
macha/src/editor/components/: macha_options.rs  selected_entity.rs
macha/src/editor/shaders/flat/: flat.frag
macha/src/editor/shaders/test/: test.frag  test.vert
macha/src/editor/systems/: gizmo_drawer.rs  hierarchy_panel.rs  mod.rs
macha/src/gltf_loader/: camera.rs  loader.rs  mod.rs  scene.rs
macha/src/gltf_loader/shaders/cubemap/: cubemap.frag  cubemap.vert
macha/src/gltf_loader/shaders/default/: default.frag  default.vert
macha/src/gltf_loader/shaders/pbr/: pbr.frag  pbr.vert
macha/src/pbr_test/: mod.rs
macha/src/pbr_test/shaders/flat/: flat.frag  flat.vert
macha/src/pbr_test/shaders/pbr/: pbr.frag  pbr.vert
macha/src/rt_test/: mod.rs
macha/src/systems/: gizmo_drawer.rs  hierarchy_panel.rs  mod.rs
macha/src/utils/: camera.rs  mod.rs  startup_state.rs  switcher.rs  ui.rs
src/: allocated_types.rs  application.rs  compute_shader.rs  cubemap.rs  descriptor_resources.rs  ecs_manager.rs  error.rs  lib.rs  material.rs  math_types.rs  mesh.rs  pipeline_barrier.rs  pipeline_builder.rs  renderer.rs  sample_vertex.rs  shader.rs  texture.rs  utils.rs  vector_type.rs
src/application/: allocated_types.rs  mod.rs  renderer.rs
src/components/: camera.rs  mesh_renderer.rs  mesh_rendering.rs  mod.rs  resource_wrapper.rs  rt_mesh_rendering.rs  transform.rs
src/components/ray_tracing/: mesh_rendering.rs  mod.rs  tlas.rs
src/egui/: mod.rs  painter.rs
src/egui/shaders/src/: egui.vert
src/egui_integration/: mod.rs  painter.rs
src/egui_integration/shaders/src/: egui.frag  egui.vert
src/macha/: bin.rs
src/morrigu/application/: mod.rs  renderer.rs
src/morrigu/core/: application.rs  layer.rs  mod.rs  timestep.rs
src/morrigu/rendering/: mod.rs  vk_renderer.rs
src/sample_app/: bin.rs
src/systems/: mesh_renderer.rs
src/vertices/: mod.rs  simple.rs  textured.rs
