[workspace]
members = [".", "macha"]

[package]
name = "morrigu"
version = "0.1.0"
authors = ["Ithyx <lamidey.m@gmail.com>"]
edition = "2021"

[lib]
name = "morrigu"

[build-dependencies]
shaderc = "0.8"

[dependencies]
log = "0.4.20"
profiling = "1.0.11"

thiserror = "1.0.50"

winit = { version = "0.29.8", features = ["rwh_05"] }
winit_input_helper = "0.15.1"
raw-window-handle = "0.5.2"

ash = { version = "0.37.3", default-features = false, features = [
	"debug",
	"linked",
] }
ash-window = "0.12.0"
gpu-allocator = "0.24.0"
spirv-reflect = "0.2.3"

glam = { version = "0.25.0", features = ["bytemuck", "mint"] }

image = "0.24.7"

memoffset = "0.9.0"
bytemuck = "1.14.0"

bevy_ecs = "0.12.0"

ply-rs = "0.1.3"
tobj = "4.0.0"

egui = { git = "https://github.com/emilk/egui", rev = "5cf8a085e3555ac92a9ca22a435a53c292ce237b", optional = true, features = ["bytemuck"] }
egui-winit = { git = "https://github.com/emilk/egui", rev = "5cf8a085e3555ac92a9ca22a435a53c292ce237b", optional = true }

[features]
egui = ["dep:egui", "dep:egui-winit"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
