[workspace]
members = [".", "macha"]

[package]
name = "morrigu"
version = "0.1.0"
authors = ["Ithyx <lamidey.m@gmail.com>"]
edition = "2021"

[lib]
name = "morrigu"

[build-dependencies]
shaderc = "0.8"

[dependencies]
log = "0.4.20"
profiling = "1.0.13"

thiserror = "1.0.50"

winit = { version = "0.29.4" }
winit_input_helper = "0.16.0"
raw-window-handle = "0.6.0"

ash = { version = "0.38.0", default-features = false, features = [
	"debug",
	"linked",
] }
ash-window = "0.13.0"
gpu-allocator = { git = "https://github.com/Ithyx/gpu-allocator", rev = "b0bb0c99e28798870e543e10e2fe6564ef9e32a5" }
spirv-reflect = { git = "https://github.com/Ithyx/spirv-reflect-rs", rev = "8ef41dee362a61a563b64a9fcda4b4a201b5b4cc" }

glam = { version = "0.27.0", features = ["bytemuck", "mint"] }

image = "0.25.0"

memoffset = "0.9.0"
bytemuck = "1.14.0"

bevy_ecs = "0.13.0"

ply-rs = "0.1.3"
tobj = "4.0.0"

egui = { version = "0.27.2", optional = true, features = ["bytemuck"] }
egui-winit = { version = "0.27.2", optional = true }

[features]
egui = ["dep:egui", "dep:egui-winit"]
ray_tracing = []

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
