[package]
name = "macha"
version = "0.1.0"
edition = "2021"

[build-dependencies]
shaderc = "0.8.0"

[dependencies]
log = "0.4"
profiling = { version = "1.0", features = ["profile-with-puffin"] }

ash = "0.37"
flexi_logger = "0.27"
anyhow = "1.0"
gltf = { git = "https://github.com/Ithyx/gltf", rev = "21aaddec4fc1411f0280d8345d1d04992b0f8994" }
morrigu = { path = "../", features = ["egui"] }
bevy_ecs = "0.12"
egui-gizmo = "0.13.0"
puffin = "0.18.1"
puffin_egui = "0.24.0"
winit = "0.29.8"
winit_input_helper = "0.15.1"
bytemuck = "1.14"
