[package]
name = "macha"
version = "0.1.0"
edition = "2021"

[build-dependencies]
shaderc = "0.8"

[dependencies]
log = "0.4"
profiling = { version = "1.0", features = ["profile-with-puffin"] }

flexi_logger = "0.29.6"
anyhow = "1.0"
gltf = { git = "https://github.com/Ithyx/gltf", rev = "914f71ea0ea657635818151d836d259cd4536880" }
morrigu = { path = "../", features = ["egui"] }
transform-gizmo = "0.4.0"
transform-gizmo-egui = "0.4.0"
bytemuck = "1.14"
clap = { version = "4.5", features = ["derive"] }

[features]
ray_tracing = [ "morrigu/ray_tracing" ]
